# currency-telegram-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
bot/: api.py  handlers.py  main.py
tests/: test_api.py  test_handlers.py
